--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check EOLs
+        run: npm run check:eol
+
       - name: Run lint
         run: npm run lint
 
       - name: Run tests
         run: npm test
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
